--- a/index.html
+++ b/index.html
@@ -1,38 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="encabezado">
-        <img class="logo-img" src="assets/imgs/Logo menu a lo veggie.png" alt="Logo menu a lo veggie">
-        <h1 class="title">Menu a lo veggie</h1>
+      <img
+        class="logo-img"
+        src="assets/imgs/Logo menu a lo veggie.png"
+        alt="Logo menu a lo veggie"
+      />
+      <h1 class="title">Menu a lo veggie</h1>
     </header>
     <main>
-        <article>
-            <header>
-
-            </header>
-
-        </article>
-        <article>
-
-        </article>
-        <article>
-            
-
-        </article>
-        <aside>
-            
-        </aside>
+        <nav>
+            <a href="#EnsaladaQuinoa">Ensalada mediterránea de quinoa</a>
+        </nav>
+      <article id="EnsaladaQuinoa" class="receta">
+        <img
+          class="receta-img"
+          src="assets/imgs/quinoa-salad.png"
+          alt="Logo menu a lo veggie"
+        />
+        <ul>
+          <liclass="receta-titulo">
+            <h2>Ensalada mediterránea de quinoa</h2>
+          </liclass=>
+          <li class="receta-descripcion">
+            <h3>Descripcion</h3>
+            <p>Una ensalada fresca y nutritiva, perfecta para los días calurosos. Esta ensalada de quinoa está llena de verduras frescas, rica en proteínas vegetales y con un toque de limón que le da una explosión de sabor. Ideal como plato principal o acompañamiento.</p>
+          </li>
+          <li class="receta-tiempoEleboracion">
+            <h3>Tiempos de elaboración</h3>
+            <ul>
+                <li>Preparación: 15 minutos</li>
+                <li>Cocción: 15 minutos</li>
+                <li>Tiempo total: 30 minutos</li>
+            </ul>
+          </li>
+          <li class="receta-ingredientes">
+            <h3>Lista de ingredientes</h3>
+            <ul title="Lista de ingredientes">
+                <li>1 taza de quinoa</li>
+                <li>2 tazas de agua</li>
+                <li>1 pepino grande, cortado en cubos</li>
+                <li>1 taza de tomates cherry, cortados a la mitad</li>
+                <li>1/2 cebolla morada, finamente picada</li>
+                <li>1/2 taza de aceitunas negras, rebanadas</li>
+                <li>1/4 taza de perejil fresco, picado</li>
+                <li>3 cucharadas de aceite de oliva</li>
+                <li>Jugo de 1 limón</li>
+                <li>Sal y pimienta al gusto</li>
+            </ul>
+          </li>
+          <li class="receta-instrucciones">
+            <h3>Instrucciones</h3>
+            <ol>
+                <li>Lava la quinoa con agua fría en un colador fino.</li>
+                <li>En una olla, cocina la quinoa con las 2 tazas de agua durante 15 minutos o hasta que se absorba el agua y la quinoa esté esponjosa.</li>
+                <li>Deja enfriar la quinoa.</li>
+                <li>En un bol grande, mezcla el pepino, los tomates cherry, la cebolla morada, las aceitunas y el perejil.</li>
+                <li>Agrega la quinoa enfriada.</li>
+                <li>En un recipiente pequeño, mezcla el aceite de oliva y el jugo de limón. Vierte sobre la ensalada.</li>
+                <li>Sazona con sal y pimienta al gusto.</li>
+                <li>Remueve bien y sirve fría.</li>
+            </ol>
+          </li>
+          <li class="receta-tablaNutricional">
+            <h3>Tabla de información nutricional </h3>
+            <table>
+            <tr>
+              <td>Nutriente</td>
+              <td>Cantidad</td>
+            </tr>
+            <tr>
+                <td>Calorías</td>
+                <td>240 kcal</td>
+            </tr>
+            <tr>
+                <td>Proteínas</td>
+                <td>6 g</td>
+            </tr>
+            <tr>
+                <td>Carbohidratos</td>
+                <td>34 g</td>
+            </tr>
+            <tr>
+                <td>Grasas</td>
+                <td>10 g</td>
+            </tr>
+            <tr>
+                <td>Fibra</td>
+                <td>5 g</td>
+            </tr>
+            <tr>
+                <td>Sodio</td>
+                <td>220 mg</td>
+            </tr>
+          </table>
+          </li>
+        </ul>
+      </article>
+      <aside></aside>
     </main>
-    <!-- <footer>
+    <footer>
         <p>&copy; 2024 Blog de Cocina Deliciosa</p>
-        <p>📧 cocina@cocina.com</p>
+        <a href="mailto:cocina@cocina.com">📧 cocina@cocina.com</a>
         <p>☎️ +34 987654321</p>
-    </footer> -->
-</body>
+    </footer>
+  </body>
 </html>
