--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       />
       <h1 class="title">Menu a lo veggie</h1>
     </header>
-    <main>
-        <nav>
-            <a href="#EnsaladaQuinoa">Ensalada mediterránea de quinoa</a>
-        </nav>
+    <main class="contenedor">
+      <nav class="indice">
+        <a href="#EnsaladaQuinoa">Ensalada mediterránea de quinoa</a>
+      </nav>
       <article id="EnsaladaQuinoa" class="receta">
         <img
           class="receta-img"
@@ -26,90 +26,118 @@
           alt="Logo menu a lo veggie"
         />
         <ul>
-          <liclass="receta-titulo">
+          <li class="receta-titulo">
             <h2>Ensalada mediterránea de quinoa</h2>
-          </liclass=>
+          </li>
           <li class="receta-descripcion">
             <h3>Descripcion</h3>
-            <p>Una ensalada fresca y nutritiva, perfecta para los días calurosos. Esta ensalada de quinoa está llena de verduras frescas, rica en proteínas vegetales y con un toque de limón que le da una explosión de sabor. Ideal como plato principal o acompañamiento.</p>
+            <p>
+              Una ensalada fresca y nutritiva, perfecta para los días calurosos.
+              Esta ensalada de quinoa está llena de verduras frescas, rica en
+              proteínas vegetales y con un toque de limón que le da una
+              explosión de sabor. Ideal como plato principal o acompañamiento.
+            </p>
           </li>
           <li class="receta-tiempoEleboracion">
             <h3>Tiempos de elaboración</h3>
             <ul>
-                <li>Preparación: 15 minutos</li>
-                <li>Cocción: 15 minutos</li>
-                <li>Tiempo total: 30 minutos</li>
+              <li>Preparación: 15 minutos</li>
+              <li>Cocción: 15 minutos</li>
+              <li>Tiempo total: 30 minutos</li>
             </ul>
           </li>
           <li class="receta-ingredientes">
             <h3>Lista de ingredientes</h3>
             <ul title="Lista de ingredientes">
-                <li>1 taza de quinoa</li>
-                <li>2 tazas de agua</li>
-                <li>1 pepino grande, cortado en cubos</li>
-                <li>1 taza de tomates cherry, cortados a la mitad</li>
-                <li>1/2 cebolla morada, finamente picada</li>
-                <li>1/2 taza de aceitunas negras, rebanadas</li>
-                <li>1/4 taza de perejil fresco, picado</li>
-                <li>3 cucharadas de aceite de oliva</li>
-                <li>Jugo de 1 limón</li>
-                <li>Sal y pimienta al gusto</li>
+              <li>1 taza de quinoa</li>
+              <li>2 tazas de agua</li>
+              <li>1 pepino grande, cortado en cubos</li>
+              <li>1 taza de tomates cherry, cortados a la mitad</li>
+              <li>1/2 cebolla morada, finamente picada</li>
+              <li>1/2 taza de aceitunas negras, rebanadas</li>
+              <li>1/4 taza de perejil fresco, picado</li>
+              <li>3 cucharadas de aceite de oliva</li>
+              <li>Jugo de 1 limón</li>
+              <li>Sal y pimienta al gusto</li>
             </ul>
           </li>
           <li class="receta-instrucciones">
             <h3>Instrucciones</h3>
             <ol>
-                <li>Lava la quinoa con agua fría en un colador fino.</li>
-                <li>En una olla, cocina la quinoa con las 2 tazas de agua durante 15 minutos o hasta que se absorba el agua y la quinoa esté esponjosa.</li>
-                <li>Deja enfriar la quinoa.</li>
-                <li>En un bol grande, mezcla el pepino, los tomates cherry, la cebolla morada, las aceitunas y el perejil.</li>
-                <li>Agrega la quinoa enfriada.</li>
-                <li>En un recipiente pequeño, mezcla el aceite de oliva y el jugo de limón. Vierte sobre la ensalada.</li>
-                <li>Sazona con sal y pimienta al gusto.</li>
-                <li>Remueve bien y sirve fría.</li>
+              <li>Lava la quinoa con agua fría en un colador fino.</li>
+              <li>
+                En una olla, cocina la quinoa con las 2 tazas de agua durante 15
+                minutos o hasta que se absorba el agua y la quinoa esté
+                esponjosa.
+              </li>
+              <li>Deja enfriar la quinoa.</li>
+              <li>
+                En un bol grande, mezcla el pepino, los tomates cherry, la
+                cebolla morada, las aceitunas y el perejil.
+              </li>
+              <li>Agrega la quinoa enfriada.</li>
+              <li>
+                En un recipiente pequeño, mezcla el aceite de oliva y el jugo de
+                limón. Vierte sobre la ensalada.
+              </li>
+              <li>Sazona con sal y pimienta al gusto.</li>
+              <li>Remueve bien y sirve fría.</li>
             </ol>
           </li>
           <li class="receta-tablaNutricional">
-            <h3>Tabla de información nutricional </h3>
+            <h3>Tabla de información nutricional</h3>
             <table>
-            <tr>
-              <td>Nutriente</td>
-              <td>Cantidad</td>
-            </tr>
-            <tr>
-                <td>Calorías</td>
-                <td>240 kcal</td>
-            </tr>
-            <tr>
-                <td>Proteínas</td>
-                <td>6 g</td>
-            </tr>
-            <tr>
-                <td>Carbohidratos</td>
-                <td>34 g</td>
-            </tr>
-            <tr>
-                <td>Grasas</td>
-                <td>10 g</td>
-            </tr>
-            <tr>
-                <td>Fibra</td>
-                <td>5 g</td>
-            </tr>
-            <tr>
-                <td>Sodio</td>
-                <td>220 mg</td>
-            </tr>
-          </table>
+              <thead>
+                <tr>
+                  <td>Nutriente</td>
+                  <td>Cantidad</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Calorías</td>
+                  <td>240 kcal</td>
+                </tr>
+                <tr>
+                  <td>Proteínas</td>
+                  <td>6 g</td>
+                </tr>
+                <tr>
+                  <td>Carbohidratos</td>
+                  <td>34 g</td>
+                </tr>
+                <tr>
+                  <td>Grasas</td>
+                  <td>10 g</td>
+                </tr>
+                <tr>
+                  <td>Fibra</td>
+                  <td>5 g</td>
+                </tr>
+                <tr>
+                  <td>Sodio</td>
+                  <td>220 mg</td>
+                </tr>
+              </tbody>
+            </table>
           </li>
         </ul>
       </article>
-      <aside></aside>
+
+      <aside>
+        <ul>
+            <li>
+                <a href="http://recetasabc.com/calculadoras-de-cocina/">Calculadoras de cocina</a>
+            </li>
+            <li><a href="https://es.greenpeace.org/es/frutas-verduras-temporada/calendario/">Calendario de frutas y verduras de temporada</a></li>
+            <li><a href="http://www.labdeiters.com/nutricalculadora/">Nutricalculadora</a></li>
+        </ul>
+      </aside>
     </main>
     <footer>
-        <p>&copy; 2024 Blog de Cocina Deliciosa</p>
-        <a href="mailto:cocina@cocina.com">📧 cocina@cocina.com</a>
-        <p>☎️ +34 987654321</p>
+      <p>&copy; 2024 Blog de Menu a lo veggie</p>
+      <a href="mailto:cocina@cocina.com">📧 cocina@cocina.com</a>
+      <a href="tel:+34 987654321">☎️ +34 987654321</a>
     </footer>
   </body>
 </html>
